[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/base"
repository = "https://github.com/base/base"
exclude = [".github/"]

[workspace]
resolver = "2"
members = [
    "bin/*",
    "crates/client/*",
    "crates/consensus/*",
    "crates/proof/mpt",
    "crates/proof/proof",
    "crates/proof/driver",
    "crates/proof/executor",
    "crates/proof/preimage",
    "crates/proof/std-fpvm",
    "crates/proof/std-fpvm-proc",
    "crates/proof/tee/core",
    "crates/proof/tee/client",
    "crates/proof/tee/server",
    "crates/proof/proposer",
    "crates/utilities/*",
    "crates/builder/*",
    "crates/infra/*",
    "crates/alloy/*",
    "crates/execution/*",
    "devnet",
]
default-members = [
    "bin/based",
    "bin/node",
    "bin/basectl",
    "bin/builder",
    "bin/consensus",
    "bin/ingress-rpc",
    "bin/audit-archiver",
    "bin/mempool-rebroadcaster",
    "bin/proposer",
]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
# Baseline - enable all default clippy lints
all = { level = "warn", priority = -1 }

# === Performance & Cloning ===
missing-const-for-fn = "warn"
redundant-clone = "warn"
clone-on-ref-ptr = "warn"
unnecessary-to-owned = "warn"
cloned-instead-of-copied = "warn"
flat-map-option = "warn"
implicit-clone = "warn"
or-fun-call = "warn"

# === Code Style ===
wildcard-imports = "warn"
use-self = "warn"
option-if-let-else = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
single-char-pattern = "warn"
redundant-else = "warn"
match-same-arms = "warn"

# === Safety & Documentation ===
undocumented-unsafe-blocks = "warn"
doc-markdown = "warn"

# === Debugging Artifacts ===
dbg-macro = "warn"

# === Code Quality ===
branches-sharing-code = "warn"
derive-partial-eq-without-eq = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
iter-with-drain = "warn"
needless-pass-by-ref-mut = "warn"
string-lit-as-bytes = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# TODO: add `rustflags = ["-Cforce-frame-pointers=yes"]` here once
# `profile-rustflags` is stabilized (tracking: rust-lang/cargo#10271)
[profile.profiling]
inherits = "release"
lto = false
debug = "line-tables-only"
strip = "none"

# CI profile: optimized for minimal disk usage in CI environments
# - Inherits from dev for fast compilation
# - No debug info to minimize artifact size
# - No split-debuginfo to avoid extra files
# - Incremental disabled to reduce cache size
[profile.ci]
inherits = "dev"
debug = false
split-debuginfo = "off"
incremental = false

[workspace.dependencies]
# Base Primitives
base-alloy-evm = { path = "crates/alloy/evm" }
base-bundles = { path = "crates/alloy/bundles" }
base-alloy-network = { path = "crates/alloy/network" }
base-alloy-provider = { path = "crates/alloy/provider" }
base-alloy-rpc-types = { path = "crates/alloy/rpc-types" }
base-alloy-hardforks = { path = "crates/alloy/hardforks" }
base-access-lists = { path = "crates/alloy/access-lists" }
base-alloy-flashblocks = { path = "crates/alloy/flashblocks" }
base-alloy-rpc-jsonrpsee = { path = "crates/alloy/rpc-jsonrpsee" }
base-alloy-flz = { path = "crates/alloy/flz", default-features = false }
base-alloy-consensus = { path = "crates/alloy/consensus", default-features = false }
base-alloy-rpc-types-engine = { path = "crates/alloy/rpc-types-engine", default-features = false }

# base-revm
base-revm = { path = "crates/execution/revm", default-features = false }

# Builder
base-builder-core = { path = "crates/builder/core" }
base-builder-publish = { path = "crates/builder/publish" }
base-builder-metering = { path = "crates/builder/metering" }

# Client
base-client-cli = { path = "crates/client/cli" }
base-metering = { path = "crates/client/metering" }
base-client-engine = { path = "crates/client/engine" }
base-flashblocks = { path = "crates/client/flashblocks" }
base-txpool-tracing = { path = "crates/client/txpool-tracing" }
base-engine-tree = { path = "crates/client/engine-tree" }

# Consensus
base-consensus-rpc = { path = "crates/consensus/rpc" }
base-protocol = { path = "crates/consensus/protocol", default-features = false }
kona-cli = { path = "crates/consensus/cli", default-features = false }
kona-disc = { path = "crates/consensus/disc", default-features = false }
kona-peers = { path = "crates/consensus/peers", default-features = false }
kona-derive = { path = "crates/consensus/derive", default-features = false }
kona-engine = { path = "crates/consensus/engine", default-features = false }
kona-gossip = { path = "crates/consensus/gossip", default-features = false }
kona-sources = { path = "crates/consensus/sources", default-features = false }
kona-genesis = { path = "crates/consensus/genesis", default-features = false }
kona-registry = { path = "crates/consensus/registry", default-features = false }
kona-hardforks = { path = "crates/consensus/hardforks", default-features = false }
kona-node-service = { path = "crates/consensus/service", default-features = false }
kona-providers-alloy = { path = "crates/consensus/providers-alloy", default-features = false }

# Execution
base-execution-chainspec = { path = "crates/execution/chainspec" }
base-execution-cli = { path = "crates/execution/cli" }
base-execution-consensus = { path = "crates/execution/consensus" }
base-execution-evm = { path = "crates/execution/evm" }
base-execution-exex = { path = "crates/execution/exex" }
base-execution-forks = { path = "crates/execution/hardforks" }
base-execution-payload-builder = { path = "crates/execution/payload" }
base-execution-primitives = { path = "crates/execution/primitives" }
base-execution-rpc = { path = "crates/execution/rpc" }
base-execution-storage = { path = "crates/execution/storage" }
base-execution-trie = { path = "crates/execution/trie" }
base-execution-txpool = { path = "crates/execution/txpool" }
base-node-core = { path = "crates/execution/node" }
base-node-runner = { path = "crates/execution/runner" }
base-txpool-rpc = { path = "crates/execution/txpool-rpc" }

# Infra
based = { path = "crates/infra/based" }
basectl-cli = { path = "crates/infra/basectl" }
audit-archiver-lib = { path = "crates/infra/audit" }
ingress-rpc-lib = { path = "crates/infra/ingress-rpc" }
websocket-proxy = { path = "crates/infra/websocket-proxy" }
mempool-rebroadcaster = { path = "crates/infra/mempool-rebroadcaster" }

# Proof
kona-mpt = { path = "crates/proof/mpt", default-features = false }
kona-proof = { path = "crates/proof/proof", default-features = false }
kona-driver = { path = "crates/proof/driver", default-features = false }
kona-executor = { path = "crates/proof/executor", default-features = false }
kona-preimage = { path = "crates/proof/preimage", default-features = false }
kona-std-fpvm = { path = "crates/proof/std-fpvm", default-features = false }
kona-std-fpvm-proc = { path = "crates/proof/std-fpvm-proc", default-features = false }
base-enclave = { path = "crates/proof/tee/core" }
base-enclave-client = { path = "crates/proof/tee/client" }
base-enclave-server = { path = "crates/proof/tee/server" }
base-proposer = { path = "crates/proof/proposer" }

# Utilities
base-jwt = { path = "crates/utilities/jwt" }
base-cli-utils = { path = "crates/utilities/cli" }
base-test-utils = { path = "crates/utilities/test-utils" }
base-proofs-extension = { path = "crates/client/proofs" }
base-flashblocks-node = { path = "crates/client/flashblocks-node" }
base-macros = { path = "crates/utilities/macros", default-features = false }

# revm
revm = { version = "34.0.0", default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }
revm-context-interface = { version = "14.0.0", default-features = false }

# alloy
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-trie = "0.9.1"
alloy-eips = { version = "1.5.2", default-features = false }
alloy-serde = { version = "1.5.2", default-features = false }
alloy-signer = "1.5.2"
alloy-chains = { version = "0.2.5", default-features = false }
alloy-network = "1.5.2"
alloy-genesis = { version = "1.5.2", default-features = false }
alloy-eip7928 = "0.3.0"
alloy-provider = "1.5.2"
alloy-contract = "1.5.2"
alloy-json-rpc = "1.5.2"
alloy-consensus = { version = "1.5.2", default-features = false }
alloy-transport = "1.5.2"
alloy-rpc-types = "1.5.2"
alloy-hardforks = "0.4.5"
alloy-sol-types = { version = "1.5.0", default-features = false }
alloy-sol-macro = "1.5.0"
alloy-rpc-client = "1.5.2"
alloy-signer-local = "1.5.2"
alloy-rpc-types-eth = { version = "1.5.2", default-features = false }
alloy-transport-http = "1.5.2"
alloy-rpc-types-debug = { version = "1.6.3", default-features = false }
alloy-rpc-types-beacon = "1.5.2"
alloy-rpc-types-engine = { version = "1.5.2", default-features = false }
alloy-network-primitives = { version = "1.5.2", default-features = false }
alloy-evm = { version = "0.27.0", default-features = false }
alloy-primitives = { version = "1.5.0", default-features = false }

# reth
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", default-features = false }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", default-features = false }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-tracing-otlp = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", default-features = false }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", default-features = false }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", default-features = false }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-zstd-compressors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }

# tokio
tokio = "1.48.0"
tokio-util = "0.7.4"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"

# async
futures = "0.3.31"
reqwest = "0.13.1"
futures-util = "0.3.31"
async-trait = "0.1.83"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-types = "0.26.0"

# cli
clap = "4.5.57"
clap_builder = "4.5.57"

# Tracing
tracing = { version = "0.1.43", default-features = false }
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"

# Metrics
metrics-derive = "0.1.0"
metrics = { version = "0.24.3", default-features = false }
metrics-process = { version = "2.4.3", default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }

# misc
hex = "0.4"
zip = "2.2"
hex-literal = "0.4"
tar = "0.4"
rsa = { version = "0.9", features = ["sha2"] }
http = "1.0"
sha3 = "0.10"
spki = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
anyhow = "1"
moka = "0.12"
discv5 = "0.10"
rlimit = "0.10"
url = "2.5.7"
rayon = "1.11"
ctor = "0.4.2"
rand = "0.9.2"
nanoid = "0.4"
lru = "0.16.3"
dashmap = "6.1"
strum = "0.27.2"
k256 = "0.13.4"
vsock = "0.5"
uuid = "1.19.0"
hyper = "1.7.0"
eyre = "0.6.12"
backon = "1.6.0"
hashbrown = { version = "0.16", features = ["rayon"] }
brotli = { version = "8.0.2", default-features = false }
bytes = "1.11.1"
rstest = "0.26.1"
chrono = "0.4.42"
rustls = "0.23.35"
rustls-pki-types = "1.0"
base64 = "0.22"
x509-cert = "0.2"
ciborium = "0.2"
serde = { version = "1.0.228", default-features = false }
thiserror = { version = "2.0", default-features = false }
tempfile = "3.8"
criterion = "0.5"
secp256k1 = "0.30"
libp2p = "0.56.0"
time = "0.3.44"
arc-swap = "1.7.1"
auto_impl = "1.2.0"
serde_with = "3.8.1"
httpmock = "0.8.2"
dirs-next = "2.0.0"
once_cell = "1.21.3"
hyper-util = "0.1.11"
derive_more = { version = "2.1.0", default-features = false }
lazy_static = "1.4.0"
parking_lot = "0.12.3"
shellexpand = "3.1"
serde_bytes = "0.11"
serde_json = { version = "1.0.145", default-features = false }
opentelemetry = "0.31"
ethereum_ssz = "0.9.0"
http-body-util = "0.1.3"
libp2p-identity = "0.2.12"
testcontainers = "0.26.3"
concurrent-queue = "2.5.0"
tikv-jemallocator = "0.6"
ethereum_ssz_derive = "0.9.0"
dirs = "6.0.0"
cadence = "1.7.0"
arboard = "3.6.1"
ratatui = "0.30.0"
crossterm = "0.28.1"
serde_yaml = "0.9.34"
either = { version = "1.15.0", default-features = false }
rdkafka = { version = "0.37.0", default-features = false }
aws-config = { version = "1.1.7", default-features = false }
aws-sdk-s3 = { version = "1.106.0", default-features = false }
aws-credential-types = { version = "1.1.7", default-features = false }
aws-nitro-enclaves-nsm-api = "0.4"
aws-nitro-enclaves-cose = "0.5"
axum = { version = "0.8.3", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
libc = "0.2"
arbitrary = { version = "1", default-features = false }
serial_test = "3"
mockall = "0.13"
wiremock = { version = "0.6.2", default-features = false }
testcontainers-modules = { version = "0.14.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
c-kzg = { version = "2.1.5", default-features = false }
rocksdb = { version = "0.24", default-features = false }
snap = "1"
bincode = "2"
arbtest = "0.3"
backoff = "0.4.0"
hostname = "0.4.0"
similar-asserts = "1"
humantime = "2.3"
test-case = "3"
proptest = "1.10.0"
miniz_oxide = "0.9.0"
modular-bitfield = "0.13.1"
proptest-arbitrary-interop = "0.1.0"
rand_08 = { package = "rand", version = "0.8" }
crossbeam-channel = "0.5.13"


# kona transitive deps
syn = "2.0"
quote = "1.0"
spin = "0.9"
toml = { version = "1.0", default-features = false }
ipnet = "2.11"
notify = "8.2"
openssl = "0.10"
multihash = "0.19"
serde_repr = "0.1"
getrandom = "0.3"
async-stream = "0.3"
libp2p-stream = "0.4.0-alpha"
unsigned-varint = { version = "0.8", default-features = false }
alloc-no-stdlib = "2.0"
async-channel = "2.5"
buddy_system_allocator = "0.12"
cfg-if = "1.0"
proc-macro2 = "1.0"
ark-ff = { version = "0.5.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false }
