[package]
name = "devnet"
description = "System/E2E tests for Base node infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# workspace
base-txpool-rpc.workspace = true
base-txpool-tracing.workspace = true
base-flashblocks.workspace = true
base-flashblocks-node.workspace = true
base-protocol = { workspace = true, features = ["serde", "std"] }
base-consensus-rpc = { workspace = true, features = ["client"] }
base-builder-core = { workspace = true, features = ["test-utils"] }
base-client-node = { workspace = true, features = ["test-utils"] }

# reth
reth-tasks.workspace = true
reth-provider.workspace = true
reth-node-core.workspace = true
base-execution-rpc.workspace = true
base-execution-node.workspace = true
base-execution-txpool.workspace = true
base-execution-chainspec.workspace = true
reth-db.workspace = true
reth-node-builder = { workspace = true, features = ["test-utils"] }

# alloy
alloy-genesis = { workspace = true, features = ["std"] }
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["std"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-signer-local = { workspace = true, features = ["mnemonic"] }

# base-alloy
base-alloy-network.workspace = true

# tokio
tokio = { workspace = true, features = ["full", "rt-multi-thread", "macros"] }

# rpc
jsonrpsee = { workspace = true, features = ["http-client"] }

# misc
hex.workspace = true
url.workspace = true
eyre.workspace = true
rand.workspace = true
nanoid.workspace = true
tracing = { workspace = true, features = ["std"] }
tempfile.workspace = true
serde_json = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive", "std"] }
testcontainers = { workspace = true, features = ["blocking", "host-port-exposure"] }

[dev-dependencies]
# alloy
alloy-eips = { workspace = true, features = ["std"] }
alloy-signer.workspace = true
alloy-consensus = { workspace = true, features = ["std"] }

# base-alloy
base-alloy-rpc-types.workspace = true
