[package]
name = "system_tests"
description = "System/E2E tests for Base node infrastructure"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "devnet"
path = "src/bin/devnet.rs"

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "rt-multi-thread", "macros"] }

# Container orchestration
testcontainers = { workspace = true, features = ["blocking", "host-port-exposure"] }

# Ethereum/Alloy
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-signer.workspace = true
alloy-rpc-client.workspace = true
alloy-sol-macro.workspace = true

# OP Alloy types
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true

# Serialization
serde_json.workspace = true

# Error handling
eyre.workspace = true

# Utilities
hex.workspace = true
rand.workspace = true
tempfile.workspace = true
tracing.workspace = true
url.workspace = true
nanoid.workspace = true
tokio-util = { workspace = true, features = ["rt"] }

# Alloy sol types for contract ABI encoding
alloy-sol-types.workspace = true

# CLI
clap.workspace = true

# Serialization (for URLs JSON)
serde = { workspace = true, features = ["derive"] }

# WebSocket client (for flashblocks)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util.workspace = true

# RPC client (moved from dev-dependencies for CLI)
alloy-provider = { workspace = true, features = ["reqwest"] }

# Reth node dependencies (for in-process builder)
reth-node-builder = { workspace = true, features = ["test-utils"] }
reth-node-core.workspace = true
reth-tasks.workspace = true
reth-db = { workspace = true, features = ["op"] }
reth-optimism-chainspec.workspace = true
reth-optimism-node.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-txpool.workspace = true

# op-rbuilder (for FlashblocksServiceBuilder)
op-rbuilder = { workspace = true, features = ["test-utils"] }
base-builder-cli.workspace = true

# Base client node (for in-process client)
base-client-node = { workspace = true, features = ["test-utils"] }
base-flashblocks.workspace = true
base-flashblocks-node.workspace = true
base-flashtypes.workspace = true
base-txpool.workspace = true
reth-provider.workspace = true
alloy-genesis.workspace = true
reqwest = { workspace = true, features = ["json"] }
alloy-rpc-types.workspace = true
alloy-network.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-rpc-client.workspace = true
alloy-signer.workspace = true

# Test-only OP types
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true


