[package]
name = "base-action-harness"
description = "Action test harness for Base — simulated L1/L2 actors for protocol integration testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
alloy-primitives.workspace = true
alloy-consensus = { workspace = true, features = ["std"] }
base-protocol = { workspace = true, features = ["std"] }
base-consensus-genesis = { workspace = true, features = ["std"] }
base-batcher-driver.workspace = true
