[package]
name = "base-reth-account-abstraction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Account Abstraction (EIP-4337) RPC Support"

[lints]
workspace = true

[dependencies]
# reth
reth.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-evm.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-primitives.workspace = true
reth-transaction-pool.workspace = true
reth-optimism-cli.workspace = true  # Enables serde & codec traits for OpReceipt/OpTxEnvelope

# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-provider.workspace = true
op-alloy-network.workspace = true

# rpc
jsonrpsee.workspace = true

# misc
tracing.workspace = true
serde.workspace = true
eyre.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true

