[package]
name = "base-fbal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FBAL library crate"

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-eip7928 = {workspace = true, features = ["serde", "rlp"]}
reth-evm.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
alloy-consensus.workspace = true
alloy-rlp = {workspace = true, features = ["derive"]}

revm.workspace = true
op-revm.workspace = true

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
