[package]
name = "base-fbal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FBAL library crate"

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-eip7928 = {workspace = true, features = ["serde", "rlp"]}
alloy-rlp = {workspace = true, features = ["derive"]}

revm.workspace = true

serde.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-sol-types.workspace = true
op-revm.workspace = true
reth-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-evm.workspace = true
serde_json.workspace = true
