[package]
name = "base-reth-flashblocks-rpc"
description = "Flashblocks RPC Support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth.workspace = true
reth-rpc-eth-api.workspace = true
reth-evm.workspace = true
reth-optimism-primitives.workspace = true
reth-rpc-convert.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-provider.workspace = true

# op-alloy
op-alloy-rpc-types.workspace = true
op-alloy-network.workspace = true
op-alloy-consensus.workspace = true

# rollup-boost
rollup-boost.workspace = true

# tokio
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true

# async
futures-util.workspace = true

# rpc
jsonrpsee.workspace = true
jsonrpsee-types.workspace = true

# misc
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
eyre.workspace = true
brotli.workspace = true
arc-swap.workspace = true

[dev-dependencies]
reth-provider.workspace = true
op-alloy-consensus.workspace = true
reth-optimism-primitives.workspace = true
reth-primitives-traits.workspace = true
alloy-rpc-client.workspace = true
base-reth-test-utils.workspace = true
rand.workspace = true
reth-db.workspace = true
reth-testing-utils.workspace = true
reth-db-common.workspace = true
reth-e2e-test-utils.workspace = true
once_cell.workspace = true
tracing-subscriber.workspace = true
